examples/i18n/tests/forgotten-semi-colon.en.result
{
  "command": "start-judgement"
}
{
  "command": "start-tab",
  "hidden": true,
  "title": "Compiler"
}
{
  "command": "append-message",
  "message": {
    "description": "Je code kon niet worden gecompileerd en bijgevolg niet worden getest. De compiler rapporteerde 1 fout.",
    "format": "callout"
  }
}
{
  "command": "start-context"
}
{
  "command": "start-testcase",
  "description": {
    "description": "Compilatiefout",
    "format": "plain"
  }
}
{
  "command": "append-message",
  "message": {
    "description": "Translated.java:4: error: ';' expected\n        return \"english\"\n                        ^",
    "format": "code"
  }
}
{
  "column": 24,
  "command": "annotate-code",
  "row": 3,
  "text": "';' expected",
  "type": "error"
}
{
  "accepted": false,
  "command": "close-testcase"
}
{
  "command": "close-context"
}
{
  "command": "close-tab"
}
{
  "accepted": false,
  "command": "close-judgement",
  "status": {
    "enum": "compilation error",
    "human": "1 fout"
  }
}
