examples/i18n/tests/forgotten-semi-colon.en.submission
public class Translated {

    public String getLanguage() {
        return "english"
    }

}
